; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_link_watch.c_linkwatch_fire_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/core/extr_link_watch.c_linkwatch_fire_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }

@__LINK_STATE_LINKWATCH_PENDING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @linkwatch_fire_event(%struct.net_device* %0) #0 {
  %2 = alloca %struct.net_device*, align 8
  %3 = alloca i32, align 4
  store %struct.net_device* %0, %struct.net_device** %2, align 8
  %4 = load %struct.net_device*, %struct.net_device** %2, align 8
  %5 = call i32 @linkwatch_urgent_event(%struct.net_device* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @__LINK_STATE_LINKWATCH_PENDING, align 4
  %7 = load %struct.net_device*, %struct.net_device** %2, align 8
  %8 = getelementptr inbounds %struct.net_device, %struct.net_device* %7, i32 0, i32 0
  %9 = call i32 @test_and_set_bit(i32 %6, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %16, label %11

11:                                               ; preds = %1
  %12 = load %struct.net_device*, %struct.net_device** %2, align 8
  %13 = call i32 @dev_hold(%struct.net_device* %12)
  %14 = load %struct.net_device*, %struct.net_device** %2, align 8
  %15 = call i32 @linkwatch_add_event(%struct.net_device* %14)
  br label %21

16:                                               ; preds = %1
  %17 = load i32, i32* %3, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %16
  br label %24

20:                                               ; preds = %16
  br label %21

21:                                               ; preds = %20, %11
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @linkwatch_schedule_work(i32 %22)
  br label %24

24:                                               ; preds = %21, %19
  ret void
}

declare dso_local i32 @linkwatch_urgent_event(%struct.net_device*) #1

declare dso_local i32 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @dev_hold(%struct.net_device*) #1

declare dso_local i32 @linkwatch_add_event(%struct.net_device*) #1

declare dso_local i32 @linkwatch_schedule_work(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
